@@ -3,6 +3,7 @@
 * Add the ability to manually link nicknames.
 * Support giving users a non-nickname alias.
 * Add a report to help identify important unassigned nicknames.
+* Add the ability to selectively link nicknames based on timestamp.
 
 0.0.1 (2012-12-21)
 ==================
